# tcx2ics

./: LICENSE  README.md  pyproject.toml
tcx2ics/: __init__.py  tcx2ics.py
tests/: test_tcx2ics_examples.py
tests/fixtures/: activity_12171312300.tcx
