[project]
name = "tcx2ics"
version = "0.1.0"
description = ""
authors = [
    {name = "Iztok Fister Jr.",email = "iztok@iztok.dev"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "tcxreader (>=0.4.11,<0.5.0)"
]

[tool.poetry]
packages = [{include = "tcx2ics", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
