[project]
name = "tcx2ics"
version = "0.1.0"
description = "Generate ICS calendar events from TCX workout files"
authors = [
    {name = "Iztok Fister Jr.",email = "iztok@iztok.dev"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "tcxreader (>=0.4.11,<0.5.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
